<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="height">Height</string>
    <string name="_170">170</string>
    <string name="cm">cm</string>
    <string name="calculate_bmi">Calculate BMI</string>
    <string name="male">Male</string>
    <string name="image_for_male">image for male</string>
    <string name="female">Female</string>
    <string name="weight">Weight</string>
    <string name="_55">55</string>
    <string name="age">Age</string>
    <string name="_23">23</string>
    <string name="bmi_calculator">BMI CALCULATOR</string>
    <string name="logo_for_the_app">logo for the app</string>
    <string name="gender">Gender</string>
    <string name="bmi_category">BMI CATEGORY:</string>
    <string name="recalculate_bmi">RECALCULATE BMI</string>
    <string name="_0">0</string>
</resources>