<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/horizontal_only"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true" />

    <RelativeLayout
        android:id="@+id/vertical_only"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true" />

    <RelativeLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_toStartOf="@id/vertical_only"
        android:background="@drawable/malefemalenotfocus"
        android:layout_above="@id/height_layout"
        android:layout_marginBottom="35dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/male">

        <ImageView
            android:layout_width="170px"
            android:layout_height="170px"
            android:layout_above="@+id/textmale"
            android:layout_centerInParent="true"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/image_for_male"
            android:src="@drawable/male" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textmale"
            android:fontFamily="@font/raleway"
            android:text="@string/male"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_alignParentBottom="true"
            android:textAlignment="center"
            android:layout_marginBottom="10dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_toEndOf="@id/vertical_only"
        android:background="@drawable/malefemalenotfocus"
        android:layout_above="@id/height_layout"
        android:layout_marginBottom="35dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/female">

        <ImageView
            android:layout_width="170px"
            android:layout_height="170px"
            android:layout_above="@+id/textfemale"
            android:layout_centerInParent="true"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/image_for_male"
            android:src="@drawable/female" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textfemale"
            android:text="@string/female"
            android:fontFamily="@font/raleway"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_alignParentBottom="true"
            android:textAlignment="center"
            android:layout_marginBottom="10dp"/>
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_toStartOf="@id/vertical_only"
        android:layout_below="@id/height_layout"
        android:layout_marginTop="85dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/cardbackgroud"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/weight">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textWeight"
            android:text="@string/weight"
            android:textColor="@color/white"
            android:fontFamily="@font/raleway"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:textAlignment="center"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/currentWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/raleway"
            android:text="@string/_55"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/plusminus">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/minus"
                android:id="@+id/decrementCurrentWeight"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="20dp"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="10dp"
            android:background="@drawable/plusminus">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/add"
                android:id="@+id/incrementCurrentWeight"/>

        </RelativeLayout>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_toEndOf="@id/vertical_only"
        android:layout_below="@id/height_layout"
        android:layout_marginTop="85dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/cardbackgroud"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/age">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textAge"
            android:text="@string/age"
            android:textColor="@color/white"
            android:fontFamily="@font/raleway"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:textAlignment="center"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/currentAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/_23"
            android:fontFamily="@font/raleway"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/plusminus">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/minus"
                android:id="@+id/decrementCurrentAge"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="20dp"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="10dp"
            android:background="@drawable/plusminus">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/add"
                android:id="@+id/incrementCurrentAge"/>

        </RelativeLayout>


    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/height_layout"
        android:layout_width="340dp"
        android:layout_height="150dp"
        android:layout_above="@id/horizontal_only"
        android:layout_centerHorizontal="true"
        android:background="@drawable/cardbackgroud"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="-50dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/height"
            android:fontFamily="@font/raleway"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/currentState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="50dp"
            android:fontFamily="@font/raleway"
            android:text="@string/_170"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/raleway"
            android:layout_toEndOf="@id/currentState"
            android:text="@string/cm"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <SeekBar
            android:id="@+id/heightSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10dp"
            android:thumbTint="@color/white"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            android:progressTint="#FF4c4c">
        </SeekBar>
    </RelativeLayout>

    <android.widget.Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/bmiButton"
        android:background="@drawable/buttonbackgroud"
        android:layout_alignParentBottom="true"
        android:textSize="15sp"
        android:layout_marginBottom="15dp"
        android:text="@string/calculate_bmi"
        android:textAllCaps="false"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/white"
        android:textStyle="bold"/>

</RelativeLayout>