<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700"
    tools:context=".BMIActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:id="@+id/image"
        android:layout_above="@id/contentLayout"
        android:layout_marginBottom="30dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ok"/>

    <RelativeLayout
        android:id="@+id/contentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/cardbackgroud"
        android:padding="20dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/bmiDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="55"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/displayGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bmiDisplay"
            android:layout_centerInParent="true"
            android:layout_marginTop="15dp"
            android:text="@string/gender"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/displayGender"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/bmi_category"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <android.widget.Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/reCalculateBmi"
        android:background="@drawable/buttonbackgroud"
        android:layout_below="@id/contentLayout"
        android:layout_marginTop="50dp"
        android:textSize="15sp"
        android:layout_marginBottom="15dp"
        android:text="@string/recalculate_bmi"
        android:textAllCaps="false"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/white"
        android:textStyle="bold"/>

</RelativeLayout>